--- a/home.html
+++ b/home.html
@@ -12,11 +12,14 @@
             font-family: Arial, Helvetica, sans-serif
         }
         .nav{
-            background-color: rgb(230, 240, 240);
-
+            background-color: rgb(255, 255, 255);
             height: 70px;
             display: flex;
+            position: fixed;
+            width: 100%;
             align-items: center;
+            box-shadow: 0px 5px 15px 1px rgba(161,146,146,0.61);
+            margin-top: -8px;
         }
         .nav li{
             display: inline;
@@ -32,6 +35,7 @@
         .video-div{
             display:flex;
             justify-content: center;
+            margin-top: 100px;
         }
         .Bio{
             display: flex;
@@ -56,20 +60,29 @@
         footer{
 
             display:flex;
-            align-items: center;
-            justify-content: center;
             background-color: black;
             color: white;
         }
         footer p {
 
-            margin: 50px;
+            margin: 20px;
         }
+        footer a {
+            color: rgb(252, 250, 250);
+        }
+        .column{
+            flex:33.33%;
+            margin-left: 50px;
+        }
+
     </style>
+    
     <nav>
         <ul class="nav">
             <li >
-                <a class="logo" href="/home.html">logo</a>
+                <a class="logo" href="/home.html">
+                    <img src="assets/logo.png" alt="Nekhunguni Funanani" width="70" height="50">
+                </a>
             </li>
             <li>
                 <a href="/home.html">Home</a>
@@ -94,11 +107,11 @@
             <p>Hy, my name is <span style="color:rgb(99, 99, 196);" >Nekhunguni Funanani</span></p>
             <p class="Bio-text-p">
                 I create digital experiences </br>
-                from <span style="color:rgb(99, 99, 196);" >Visual identities</span></br>
+                from <span style="color:rgb(99, 99, 196);" >Visual identities,</span></br>
                 Impacting <span style="color:rgb(99, 99, 196);" >websites</span></br>
                 to <span style="color:rgb(99, 99, 196);" >apps</span>
             </p>
-            <button>read more</button>
+            <button onclick="window.location.href='/about.html';">read more</button>
          </div>
          <div class="Bio-img">
             <img src="assets/IMG_1666.jpg" alt="Nekhunguni Funanani" width="350" height="300">
@@ -106,8 +119,22 @@
     </div>
     </br>
     <footer>
-        <p>Author: Funanani Nekhunguni</p>
-        <p>Email: <a href="mailto:nekhungunifunanani9@gmail.com" style="color:rgb(99, 99, 196);">nekhungunifunanani9@gmail.com</a></p>
+        <div class="column">
+            <p class="name"><span style="color:rgb(99, 99, 196); font-weight: bold;" >Nekhunguni Funanani</span></p>
+            <p>Tshilamba Mutale</p>
+            <p>P.O.BOX 146</p>
+            <p>khunguni 10043</p>
+
+        </div>
+        <div class="column">
+            <p style="color:rgb(203, 203, 240); font-weight: bold;" >Social Media</p>
+            <p><a href="https://www.facebook.com/">Facebook</a></p>
+            <p><a href="https://twitter.com/Funi_NF">Twitter</a></p>
+            <p><a href="https://www.linkedin.com/in/nekhunguni/">LinkedIn</a></p>
+        </div>
+        <div class="column">
+            <p>map image</p>
+        </div>
       </footer>
 </body>
 
