--- a/contactUs.html
+++ b/contactUs.html
@@ -33,9 +33,58 @@
             margin-right: 800px;
         }
 
-        .Bio-img{
-            margin-left: auto;
+        .image-baner{
+            background-image:
+                linear-gradient(45deg,
+                    rgba(149, 139, 155, 0.75),
+                    rgb(99, 99, 196)), 
+                      url('/assets/contact.jpg');
+            width: 100%;
+            height: 380px;
+            background-image: cover;
+            text-align: center;
+            color: #fff;
         }
+        .contact{
+
+            padding-top: 200px;
+            font-size: 40px;
+        }
+        .form-class{
+            display: flex;
+            background-color: #f2f2f2;
+            justify-content: center;
+        }
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+            }
+
+        input[type=submit] {
+            background-color: #04AA6D;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+            }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+            width: 80%;
+            }
         footer{
 
             display:flex;
@@ -75,6 +124,27 @@
         </ul>
     </nav>
     </br>
+        <div class="image-baner"> 
+            <p class="contact">Contact Me</p>    
+        </div>
+        <div class="form-class">
+        </br>
+
+            <div class="container">
+            <form action="">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+            </div>
+        </div>
 
     </br>
     <footer>
