--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
             <p><a href="https://www.linkedin.com/in/nekhunguni/">LinkedIn</a></p>
         </div>
         <div class="column">
-            <p>map image</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.148501736195!2d28.010073185540424!3d-26.32169045748313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9506716b6e535f%3A0x671fee03ce7bb5fe!2s14%20Moore%20Grove%2C%20Kibler%20Park%2C%20Johannesburg%20South%2C%202091!5e0!3m2!1sen!2sza!4v1712401412454!5m2!1sen!2sza" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
 </body>
