--- a/about.html
+++ b/about.html
@@ -4,77 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Nekhnguni Funanani </title>
 </head>
 <body>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif
-        }
-        .nav{
-            background-color: rgb(255, 255, 255);
-            height: 70px;
-            display: flex;
-            position: fixed;
-            width: 100%;
-            align-items: center;
-            box-shadow: 0px 5px 15px 1px rgba(161,146,146,0.61);
-            margin-top: -8px;
-        }
-        .nav li{
-            display: inline;
-            margin-left: 50px;
-        }
-        .nav li a{
-            text-decoration: none;
-            color:rgb(99, 99, 196);
-        }
-        .logo{
-            margin-right: 800px;
-        }
-        .about-info{
 
-            background-color: rgb(211, 211, 210);
-            height: 800px;
-            margin-top: -50px;
-        }
-        .about-me{
-
-            padding-top: 100px;
-            padding-left: 250px;
-            font-weight: bold;
-            font-size: 100px;
-            color:rgb(80, 79, 80);
-        }
-        .about-desc{
-
-            width: 40%;
-            line-height: 2;
-            font-size: 20px;
-            margin-left: 600px;
-            color:rgb(80, 79, 80);
-        }
-
-        footer{
-
-            display:flex;
-            background-color: black;
-            color: white;
-        }
-        footer p {
-
-            margin: 20px;
-        }
-        footer a {
-            color: rgb(252, 250, 250);
-        }
-        .column{
-            flex:33.33%;
-            margin-left: 50px;
-        }
-
-    </style>
-    
     <nav>
         <ul class="nav">
             <li >
@@ -93,7 +27,7 @@
             </li>
         </ul>
     </nav>
-    </br>
+    <br/>
         <div class="about-info">
 
             <p class="about-me">About Me</p>
@@ -109,7 +43,7 @@
                 to integrity and collaboration.
             </p>
         </div>
-    </br>
+    <br/>
     <footer>
         <div class="column">
             <p class="name"><span style="color:rgb(99, 99, 196); font-weight: bold;" >Nekhunguni Funanani</span></p>
