--- a/contactUs.html
+++ b/contactUs.html
@@ -4,106 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Nekhnguni Funanani </title>
 </head>
 <body>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif
-        }
-        .nav{
-            background-color: rgb(255, 255, 255);
-            height: 70px;
-            display: flex;
-            position: fixed;
-            width: 100%;
-            align-items: center;
-            box-shadow: 0px 5px 15px 1px rgba(161,146,146,0.61);
-            margin-top: -8px;
-        }
-        .nav li{
-            display: inline;
-            margin-left: 50px;
-        }
-        .nav li a{
-            text-decoration: none;
-            color:rgb(99, 99, 196);
-        }
-        .logo{
-            margin-right: 800px;
-        }
-
-        .image-baner{
-            background-image:
-                linear-gradient(45deg,
-                    rgba(149, 139, 155, 0.75),
-                    rgb(99, 99, 196)), 
-                      url('/assets/contact.jpg');
-            width: 100%;
-            height: 380px;
-            background-image: cover;
-            text-align: center;
-            color: #fff;
-        }
-        .contact{
-
-            padding-top: 200px;
-            font-size: 40px;
-        }
-        .form-class{
-            display: flex;
-            background-color: #f2f2f2;
-            justify-content: center;
-        }
-        input[type=text], select, textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            margin-top: 6px;
-            margin-bottom: 16px;
-            resize: vertical;
-            }
-
-        input[type=submit] {
-            background-color: #04AA6D;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            }
-
-        input[type=submit]:hover {
-            background-color: #45a049;
-            }
-
-        .container {
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            padding: 20px;
-            width: 80%;
-            }
-        footer{
-
-            display:flex;
-            background-color: black;
-            color: white;
-        }
-        footer p {
-
-            margin: 20px;
-        }
-        footer a {
-            color: rgb(252, 250, 250);
-        }
-        .column{
-            flex:33.33%;
-            margin-left: 50px;
-        }
-
-    </style>
     
     <nav>
         <ul class="nav">
@@ -123,12 +27,12 @@
             </li>
         </ul>
     </nav>
-    </br>
+    <br/>
         <div class="image-baner"> 
             <p class="contact">Contact Me</p>    
         </div>
         <div class="form-class">
-        </br>
+        <br/>
 
             <div class="container">
             <form action="">
@@ -146,7 +50,7 @@
             </div>
         </div>
 
-    </br>
+    <br/>
     <footer>
         <div class="column">
             <p class="name"><span style="color:rgb(99, 99, 196); font-weight: bold;" >Nekhunguni Funanani</span></p>
