--- a/home.html
+++ b/home.html
@@ -4,78 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Nekhnguni Funanani </title>
 </head>
 <body>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif
-        }
-        .nav{
-            background-color: rgb(255, 255, 255);
-            height: 70px;
-            display: flex;
-            position: fixed;
-            width: 100%;
-            align-items: center;
-            box-shadow: 0px 5px 15px 1px rgba(161,146,146,0.61);
-            margin-top: -8px;
-        }
-        .nav li{
-            display: inline;
-            margin-left: 50px;
-        }
-        .nav li a{
-            text-decoration: none;
-            color:rgb(99, 99, 196);
-        }
-        .logo{
-            margin-right: 800px;
-        }
-        .video-div{
-            display:flex;
-            justify-content: center;
-            margin-top: 100px;
-        }
-        .Bio{
-            display: flex;
-            flex-direction: row;
-            width:90%;
-            align-items: center;
-            margin-left: 65px;
-            height: 500px;
 
-        }
-        .Bio-text{
-            width:50%;
-            font-size: 25px;
-        }
-        .Bio-text-p{
-            font-size: 20px;
-            line-height:1.8
-        }
-        .Bio-img{
-            margin-left: auto;
-        }
-        footer{
-
-            display:flex;
-            background-color: black;
-            color: white;
-        }
-        footer p {
-
-            margin: 20px;
-        }
-        footer a {
-            color: rgb(252, 250, 250);
-        }
-        .column{
-            flex:33.33%;
-            margin-left: 50px;
-        }
-
-    </style>
     
     <nav>
         <ul class="nav">
@@ -95,13 +28,13 @@
             </li>
         </ul>
     </nav>
-    </br>
+    <br/>
     <div class="video-div">
         <video width="90%" height="400" controls>
             <source src="/assets/video1.mp4" type="video/mp4">
         </video>
     </div>
-    </br>
+    <br/>
     <div class="Bio">
          <div class="Bio-text">
             <p>Hy, my name is <span style="color:rgb(99, 99, 196);" >Nekhunguni Funanani</span></p>
@@ -117,7 +50,7 @@
             <img src="assets/IMG_1666.jpg" alt="Nekhunguni Funanani" width="350" height="300">
          </div>
     </div>
-    </br>
+    <br/>
     <footer>
         <div class="column">
             <p class="name"><span style="color:rgb(99, 99, 196); font-weight: bold;" >Nekhunguni Funanani</span></p>
