--- a/contactUs.html
+++ b/contactUs.html
@@ -36,13 +36,13 @@
 
             <div class="container">
             <form action="">
-                <label for="fname">First Name</label>
+                <label for="fname">Names</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <label for="lname">Email</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your email..">
 
-                <label for="subject">Subject</label>
+                <label for="subject">Message</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
                 <input type="submit" value="Submit">
@@ -66,7 +66,7 @@
             <p><a href="https://www.linkedin.com/in/nekhunguni/">LinkedIn</a></p>
         </div>
         <div class="column">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.148501736195!2d28.010073185540424!3d-26.32169045748313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9506716b6e535f%3A0x671fee03ce7bb5fe!2s14%20Moore%20Grove%2C%20Kibler%20Park%2C%20Johannesburg%20South%2C%202091!5e0!3m2!1sen!2sza!4v1712401412454!5m2!1sen!2sza" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.148501736195!2d28.010073185540424!3d-26.32169045748313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9506716b6e535f%3A0x671fee03ce7bb5fe!2s14%20Moore%20Grove%2C%20Kibler%20Park%2C%20Johannesburg%20South%2C%202091!5e0!3m2!1sen!2sza!4v1712401412454!5m2!1sen!2sza" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </footer>
 </body>
