added javascript cards for project

--- a/about.html
+++ b/about.html
@@ -29,83 +29,14 @@
     </nav>
     <br/>
     <section class="about">
-        <header style="height: 200px; display:flex; align-items:center; justify-content:center;">
-            <h1>About Funanani Nekhunguni</h1>
-        </header>
-        <main>
-            <table>
-                <tr>
-                    <th colspan="2">SOFTWARE DEVELOPER</th>
-                </tr>
-                <tr>
-                    <td colspan="2">Funanani Nekhunguni</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Skills</strong></td>
-                </tr>
-                <tr>
-                    <td>Python</td>
-                    <td>Flask, Django, Pytorch, Tensorflow</td>
-                </tr>
-                <tr>
-                    <td>Javascript</td>
-                    <td>React, jQuery, Express, Node.js</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Databases: SQL, MongoDB</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Version Control: Git and GitHub</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Profile</strong></td>
-                </tr>
-                <tr>
-                    <td colspan="2">BSc in Computer Science and Statistics graduate with a knack for impactful solutions. As a freelance developer, improved productivity by 70% at Jazzy Events. In the Data Scientist Trainee role, enhanced team performance by 30%. Proficient in Python, SQL, and JavaScript, with a winning record in hackathons and AI competitions.</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Experience</strong></td>
-                </tr>
-                <tr>
-                    <td>Jazzy Events</td>
-                    <td>Applications Developer</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Collaborated with a modeling agency startup, employing Python Flask and React to develop a model management system. Cut new model application waiting time by 50% and increasing productivity by 70%.</td>
-                </tr>
-                <tr>
-                    <td>University of Limpopo Cricket Club</td>
-                    <td>Data Scientist Volunteer</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Analyzed player statistics, fitness data, and team performance using Python, Excel, and PowerBI. Employing TensorFlow, developed AI models for score predictions and tailored training drills. Achieved a 30% increase in team win percentage and player fitness. Helped the team secure second position in cricket USSA.</td>
-                </tr>
-                <tr>
-                    <td>Nekhunguni Academy</td>
-                    <td>Mathematics Tutor</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Exemplary Grade 12 Mathematics Tutor credited with achieving a 100% pass rate among students.</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Education</strong></td>
-                </tr>
-                <tr>
-                    <td>Thengwe High School</td>
-                    <td>2015 - 2019</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Secondary School</td>
-                </tr>
-                <tr>
-                    <td>University of Limpopo</td>
-                    <td>2020 - 2023</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Bachelor of Science in Computer Science and Statistics</td>
-                </tr>
-            </table>
-        </main>
+       <div id="projects">
+        <p class="title">project</p>
+        <div id="projectList">
+
+        </div>
+       </div>
+
+       <div class="about-me"></div>
     </section>
     <br/>
     <footer>
@@ -126,6 +57,8 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.148501736195!2d28.010073185540424!3d-26.32169045748313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9506716b6e535f%3A0x671fee03ce7bb5fe!2s14%20Moore%20Grove%2C%20Kibler%20Park%2C%20Johannesburg%20South%2C%202091!5e0!3m2!1sen!2sza!4v1712401412454!5m2!1sen!2sza" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </footer>
+
+    <script src="index.js" ></script>
 </body>
 
 </html>
