--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
     <br/>
     <div class="Bio">
          <div class="Bio-text">
-            <p>Hy, my name is <span style="color:rgb(99, 99, 196);" >Nekhunguni Funanani</span></p>
+            <p>Hy, my name is <span style="color:rgb(99, 99, 196);" id="my-name"></span></p>
             <p class="Bio-text-p">
                 I create digital experiences </br>
                 from <span style="color:rgb(99, 99, 196);" >Visual identities,</span></br>
@@ -71,6 +71,7 @@
             </div>
         </div>
       </footer>
+      <script src="index.js" ></script>
 </body>
 
 </html>
