added links to projects

--- a/about.html
+++ b/about.html
@@ -30,13 +30,31 @@
     <br/>
     <section class="about">
        <div id="projects">
-        <p class="title">project</p>
-        <div id="projectList">
 
+        <p class="title">Project</p>
+        <div id="projectList">
         </div>
+        <br/>
        </div>
 
-       <div class="about-me"></div>
+       <div class="about-me">
+        <p class="title">About Me</p>
+        <div id="aboutMeDesc">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Eos iure sint eligendi modi, dicta eum ea quae voluptatibus recusandae. 
+                Dicta reiciendis illum laborum expedita natus, delectus molestiae placeat nihil esse!
+
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Quo beatae vero harum reiciendis id deleniti cum blanditiis 
+                dolore rerum magnam voluptatum, 
+                fuga molestias, earum quae qui aut culpa voluptate pariatur.
+            </p>
+            <div id="experience">
+                <h4>Experience</h4>
+            </div>
+        </div>
+       </div>
     </section>
     <br/>
     <footer>
