finished the form and about page

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Nekhnguni Funanani </title>
+    <link rel="icon" href="assets/logo.png" type="image/icon type">
+    <title>Nekhunguni Funanani </title>
 </head>
 <body>
 
@@ -29,32 +30,42 @@
     </nav>
     <br/>
     <section class="about">
-       <div id="projects">
-
-        <p class="title">Project</p>
-        <div id="projectList">
-        </div>
-        <br/>
-       </div>
-
-       <div class="about-me">
-        <p class="title">About Me</p>
-        <div id="aboutMeDesc">
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Eos iure sint eligendi modi, dicta eum ea quae voluptatibus recusandae. 
-                Dicta reiciendis illum laborum expedita natus, delectus molestiae placeat nihil esse!
-
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Quo beatae vero harum reiciendis id deleniti cum blanditiis 
-                dolore rerum magnam voluptatum, 
-                fuga molestias, earum quae qui aut culpa voluptate pariatur.
-            </p>
-            <div id="experience">
-                <h4>Experience</h4>
+        <div class="about-me">
+            <p class="title">About Me</p>
+            <div id="aboutMeDesc">
+                <p>
+                    I am Funanani Nekhunguni, a dedicated software developer 
+                    with a strong background in Computer Science and Statistics. 
+                    Proficient in Python, Flask, Django, PyTorch, TensorFlow, and JavaScript 
+                    frameworks like React and Node.js, I specialize in creating impactful solutions. 
+                    With hands-on experience spanning web development to machine learning, I am 
+                    committed to continuous learning and thrive in collaborative environments 
+                    where creativity flourishes. Passionate about problem-solving, 
+                    I approach each project with enthusiasm, attention to detail, 
+                    and a focus on delivering excellence.
+                </p>
+                <br/>
+                <div id="experience">
+                    <div id="experience-experience">
+                        <h3 style="color:rgb(111, 184, 252);">Experience</h3>
+                        <p>2023 Freelance software developer</p>
+                    </div>
+                    <div id="education">
+                        <h3 style="color:rgb(111, 184, 252);">Education</h3>
+                        <p>2023 BSc mathematical science</p>
+                    </div>
+                </div>
             </div>
+           </div>
+
+        <div id="projects">
+            <br/>
+            <br/>
+            <p class="title">Project</p>
+            <div id="projectList">
+            </div>
+            <br/>
         </div>
-       </div>
     </section>
     <br/>
     <footer>
