--- a/contactUs.html
+++ b/contactUs.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Nekhnguni Funanani </title>
+    <link rel="icon" href="assets/logo.png" type="image/icon type">
+    <title>Nekhunguni Funanani </title>
 </head>
 <body>
     
@@ -35,12 +36,12 @@
         <br/>
 
             <div class="container">
-            <form action="">
+            <form action="https://formspree.io/f/mwkgaqln" method="POST" >
                 <label for="fname">Names</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <input type="text" id="fname" name="name" placeholder="Your name..">
 
                 <label for="lname">Email</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your email..">
+                <input type="text" id="lname" name="email" placeholder="Your email..">
 
                 <label for="subject">Message</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
